# SpyTime

./: .gitignore  .ruff.toml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
app/: .env.template  Dockerfile  alembic.ini  create_fastapi_app.py  main.py  run  spytime.db
app/alembic/: env.py
app/alembic/versions/: 2025_01_22_1319-c5ff8fb15b96_create_tables_lobbies.py  2025_01_22_1506-9a05894fa572_create_tables_lobbies.py  2025_01_23_0122-3b2e7fba2a1a_create_tables_lobbies.py  2025_01_29_1855-44e5d2ed80fb_add_lobbies_table.py  2025_01_30_1508-635d76c8bf47_add_lobbies_table.py  2025_03_23_0119-d8a2654d2ed3_create_table_lobbies.py  2025_08_14_0215-7abe3756c402_new.py  2025_08_14_1335-b4158d53eb0a_new.py
app/api/api_v1/: __init__.py  crud.py  dependencies.py  shemas.py  views.py
app/core/: config.py
app/core/db/: db_helper.py
app/models/: __init__.py  lobby.py  player.py
nginx/: Dockerfile  default.conf
