[tool.poetry]
name = "spytime"
version = "0.1.0"
description = ""
authors = ["Andrey <lagunmelman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standart"], version = "^0.34.0"}
black = "^24.10.0"
pydantic = "^2.10.5"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
alembic = "^1.14.1"
pydantic-settings = "^2.7.1"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
